--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
       </section>
       <section>
         <h2>Контакты</h2>
-        <a href="#"><img src="#" alt="Карта проезда" width="300" height="158"></a>
+        <a href="#"><img src="map.jpg" alt="Карта проезда" width="300" height="158"></a>
         <a href="#">Заблудились? Напишите нам!</a>
       </section>
     </main>
     <footer>
-      <a href="#"><img src="#" alt="Логотип компании" width="138" height="23"></a>
+      <a href="#"><img src="logo.svg" alt="Логотип компании" width="138" height="23"></a>
       <p>
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
       </p>
