--- a/catalog.html
+++ b/catalog.html
@@ -46,13 +46,13 @@
       <h1>Перфораторы</h1>
       <!-- Здесь будет форма -->
       <article>
-        <a href="#"><img src="#" alt="Перфоратор BOSCH BFG 3000" width="218" height="170"></a>
+        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170"></a>
         <h3>Перфоратор BOSCH BFG 3000</h3>
         <p>22500 Р.</p>
         <p>15500 Р.</p>
       </article>
       <article>
-        <a href="#"><img src="#" alt="Перфоратор BOSCH BFG 6000" width="218" height="170"></a>
+        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170"></a>
         <h3>Перфоратор BOSCH BFG 6000</h3>
         <p>30500 Р.</p>
         <p>25500 Р.</p>
@@ -64,37 +64,37 @@
         <p>12500 Р.</p>
       </article>
       <article>
-        <a href="#"><img src="#" alt="Перфоратор BOSCH BFG 3000" width="218" height="170"></a>
+        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170"></a>
         <h3>Перфоратор BOSCH BFG 3000</h3>
         <p>22500 Р.</p>
         <p>15500 Р.</p>
       </article>
       <article>
-        <a href="#"><img src="#" alt="Перфоратор BOSCH BFG 6000" width="218" height="170"></a>
+        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170"></a>
         <h3>Перфоратор BOSCH BFG 6000</h3>
         <p>22500 Р.</p>
         <p>15500 Р.</p>
       </article>
       <article>
-        <a href="#"><img src="#" alt="Перфоратор BOSCH BFG 2000" width="218" height="170"></a>
+        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170"></a>
         <h3>Перфоратор BOSCH BFG 2000</h3>
         <p>22500 Р.</p>
         <p>15500 Р.</p>
       </article>
       <article>
-        <a href="#"><img src="#" alt="Перфоратор BOSCH BFG 3000" width="218" height="170"></a>
+        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170"></a>
         <h3>Перфоратор BOSCH BFG 3000</h3>
         <p>22500 Р.</p>
         <p>15500 Р.</p>
       </article>
       <article>
-        <a href="#"><img src="#" alt="Перфоратор BOSCH BFG 6000" width="218" height="170"></a>
+        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170"></a>
         <h3>Перфоратор BOSCH BFG 6000</h3>
         <p>22500 Р.</p>
         <p>15500 Р.</p>
       </article>
       <article>
-        <a href="#"><img src="#" alt="Перфоратор BOSCH BFG 2000" width="218" height="170"></a>
+        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170"></a>
         <h3>Перфоратор BOSCH BFG 2000</h3>
         <p>22500 Р.</p>
         <p>15500 Р.</p>
