--- a/catalog.html
+++ b/catalog.html
@@ -7,15 +7,18 @@
   <body>
     <header>
       <div>
-        <a href="#"><img src="logo.svg" alt="Логотип компании" width="109" height="19"></a>
-        <!-- Здесь будет форма -->
+        <a href="index.html"><img src="logo.svg" alt="Логотип компании" width="109" height="19"></a>
+        <form>
+          <label for="search">Поиск</label>
+          <input type="search" id="search" placeholder="Поиск:">
+        </form>
         <a href="#">Закладки: 0</a>
         <a href="#">Корзина: 10</a>
         <a href="#">Оформить заказ</a>
       </div>
       <div>
         <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-        <p>+7 (812) 555-05-55</p>
+        <p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <ul>
           <li><a href="#">Равшан Джамшутович</a></li>
@@ -38,69 +41,192 @@
     </header>
     <main>
       <ul>
-        <li><a href="index.html"><img src="#" alt="Домой"></a></li>
+        <li><a href="index.html"><img src="#" alt="Домой">Домой</a></li>
         <li><a href="catalog.html">Каталог</a></li>
         <li><a href="#">Инструмент</a></li>
         <li><a href="#">Перфораторы</a></li>
       </ul>
       <h1>Перфораторы</h1>
-      <!-- Здесь будет форма -->
-      <article>
-        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170"></a>
-        <h3>Перфоратор BOSCH BFG 3000</h3>
-        <p>22500 Р.</p>
-        <p>15500 Р.</p>
-      </article>
-      <article>
-        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170"></a>
-        <h3>Перфоратор BOSCH BFG 6000</h3>
-        <p>30500 Р.</p>
-        <p>25500 Р.</p>
-      </article>
-      <article>
-        <a href="#">Купить</a>
-        <a href="#">В закладки</a>
-        <h3>Перфоратор BOSCH BFG 2000</h3>
-        <p>12500 Р.</p>
-      </article>
-      <article>
-        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170"></a>
-        <h3>Перфоратор BOSCH BFG 3000</h3>
-        <p>22500 Р.</p>
-        <p>15500 Р.</p>
-      </article>
-      <article>
-        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170"></a>
-        <h3>Перфоратор BOSCH BFG 6000</h3>
-        <p>22500 Р.</p>
-        <p>15500 Р.</p>
-      </article>
-      <article>
-        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170"></a>
-        <h3>Перфоратор BOSCH BFG 2000</h3>
-        <p>22500 Р.</p>
-        <p>15500 Р.</p>
-      </article>
-      <article>
-        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170"></a>
-        <h3>Перфоратор BOSCH BFG 3000</h3>
-        <p>22500 Р.</p>
-        <p>15500 Р.</p>
-      </article>
-      <article>
-        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170"></a>
-        <h3>Перфоратор BOSCH BFG 6000</h3>
-        <p>22500 Р.</p>
-        <p>15500 Р.</p>
-      </article>
-      <article>
-        <a href="#"><img src="item1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170"></a>
-        <h3>Перфоратор BOSCH BFG 2000</h3>
-        <p>22500 Р.</p>
-        <p>15500 Р.</p>
-      </article>
-      <!-- Здесь будет пагинация -->
-      <!-- Здесь будет блок о перфораторах -->
+      <section>
+        <h2>Фильтр</h2>
+        <form>
+          <!--
+          <fieldset>
+            <legend>Цена:</legend>
+              <div>
+                <input type="text" value="0">
+                -
+                <input type="text" value="30000">
+              </div>
+          </fieldset>
+        -->
+          <fieldset>
+            <legend>Производители:</legend>
+            <ul>
+              <li>
+                <input type="checkbox" id="bosch" name="bosch" checked>
+                <label for="bosch">Bosch</label>
+              </li>
+              <li>
+                <input type="checkbox" id="interskol" name="interskol">
+                <label for="interskol">ИнтерсколЛ</label>
+              </li>
+              <li>
+                <input type="checkbox" id="makita" name="makita" checked>
+                <label for="makita">Makita</label>
+              </li>
+              <li>
+                <input type="checkbox" id="dewalt" name="dewalt">
+                <label for="dewalt">Dewalt</label>
+              </li>
+              <li>
+                <input type="checkbox" id="hitachi" name="hitachi">
+                <label for="hitachi">Hitachi</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset>
+            <legend>Питание:</legend>
+            <ul>
+              <li>
+                <input type="radio" id="battery" name="power" checked>
+                <label for="battery">Аккумуляторные</label>
+              </li>
+              <li>
+                <input type="radio" id="network" name="power">
+                <label for="network">Сетевые</label>
+              </li>
+            </ul>
+          </fieldset>
+          <button type="submit">Показать</button>
+        </form>
+      </section>
+      <section>
+        <div>
+        <h2>Каталог перфораторов</h2>
+        <!--
+        <div>
+          <span>Сортировка:</span>
+          <a href="#">По цене</a>
+          <a href="#">По типу</a>
+          <a href="#">По функционалу</a>
+          <a href="#">По возрастанию</a>
+          <a href="#">По убыванию</a>
+        </div>
+        -->
+        <article>
+          <h3>Перфоратор BOSCH BFG 3000</h3>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+          <p>22500 Р.</p>
+          <p>15500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+        </article>
+        <article>
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
+          <p>30500 Р.</p>
+          <p>25500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+        </article>
+        <article>
+          <h3>Перфоратор BOSCH BFG 2000</h3>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
+          <p>12500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+        </article>
+        <article>
+          <h3>Перфоратор BOSCH BFG 3000</h3>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+          <p>22500 Р.</p>
+          <p>15500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+        </article>
+        <article>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <p>22500 Р.</p>
+          <p>15500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+          </div>
+        </article>
+        <article>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
+          <h3>Перфоратор BOSCH BFG 2000</h3>
+          <p>12500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+          </div>
+        </article>
+        <article>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+          <h3>Перфоратор BOSCH BFG 3000</h3>
+          <p>22500 Р.</p>
+          <p>15500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+          </div>
+        </article>
+        <article>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <p>22500 Р.</p>
+          <p>15500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+          </div>
+        </article>
+        <article>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
+          <h3>Перфоратор BOSCH BFG 2000</h3>
+          <p>12500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+          </div>
+        </article>
+      </div>
+      </section>
+      <!--
+      <div>
+        <ul>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">Следующая</a></li>
+        </ul>
+      </div>
+      <section>
+        <h2>Пара слов о перфораторах</h2>
+        <p>Перфоратор — универсальный строительный инструмент.
+          Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+          Существуют электромеханические и пневматические перфораторы.
+          Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
+          В ассортиментном ряду есть выбор «трехрежимников»:
+          в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+      </section>
+      -->
     </main>
     <footer>
       <a href="#"><img src="logo.svg" alt="Логотип компании" width="138" height="23"></a>
@@ -108,7 +234,7 @@
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
       </p>
       <p>
-        +7 (812) 555-05-55
+        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
       </p>
       <ul>
         <li><a href="#">Компания</a></li>
@@ -124,7 +250,7 @@
         <li><a href="#">Спецпредложения</a></li>
       </ul>
       <p>
-        © 2010–2019 Компания «Техномарт»<br>
+        © 2010–2019 Компания «Техномарт»
         Все права защищены
       </p>
       <ul>
