--- a/index.html
+++ b/index.html
@@ -1,105 +1,246 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
-    <header>
-      <div>
-        <a href="#"><img src="logo.svg" alt="Логотип компании" width="109" height="19"></a>
-        <!-- Здесь будет форма -->
-        <a href="#">Закладки: 0</a>
-        <a href="#">Корзина: 0</a>
-        <a href="#">Оформить заказ</a>
-      </div>
-      <div>
-        <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-        <p>+7 (812) 555-05-55</p>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <ul>
-          <li><a href="#">Войти</a></li>
-          <li><a href="#">Регистрация</a></li>
-        </ul>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-      <!-- Промо-блок, Популярные товары, Популярные производители
-    Сервисы -->
-      <section>
-        <h2>КОМПАНИЯ «Техномарт»</h2>
-        <p>
-          Настоящий мужской шоппинг начинается здесь!
-          Огромный выбор товаров для ремонта и строительства
-          не оставит равнодушными любителей сэкономить на гастарбайтерах.
-        </p>
-        <p>
-          Мы можем доставить ваш товар в самые отдаленные точки России!
-          Техномарт работает со многими транспортными компаниями:
-        </p>
-        <ul>
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
-        </ul>
-        <a href="#">Подробнее о компании</a>
-      </section>
-      <section>
-        <h2>Контакты</h2>
-        <a href="#"><img src="map.jpg" alt="Карта проезда" width="300" height="158"></a>
-        <a href="#">Заблудились? Напишите нам!</a>
-      </section>
-    </main>
-    <footer>
-      <a href="#"><img src="logo.svg" alt="Логотип компании" width="138" height="23"></a>
-      <p>
-        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-      </p>
-      <p>
-        +7 (812) 555-05-55
-      </p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
+</head>
+<body>
+  <header>
+    <div>
+      <a href="#"><img src="logo.svg" alt="Логотип компании" width="109" height="19"></a>
+      <form>
+        <label for="search">Поиск</label>
+        <input type="search" id="search" placeholder="Поиск:">
+      </form>
+      <a href="#">Закладки: 0</a>
+      <a href="#">Корзина: 0</a>
+      <a href="#">Оформить заказ</a>
+    </div>
+    <div>
+      <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
+      <p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       <ul>
+        <li><a href="#">Войти</a></li>
+        <li><a href="#">Регистрация</a></li>
+      </ul>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Главная</a></li>
         <li><a href="#">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
         <li><a href="#">Новости</a></li>
-        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Спецпредложения</a></li>
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Контакты</a></li>
       </ul>
+    </nav>
+  </header>
+  <main>
+    <h1>Главная страница магазина Техномарт</h1>
+    <!--
+    <section>
+      <h2>Товары и услуги</h2>
+      <div>
+        <span>Материалы</span>
+        <a href="#">На любой вкус</a>
+      </div>
+      <div>
+        <span>Инструмент</span>
+        <a href="#">На все случаи</a>
+      </div>
+      <div>
+        <span>Техника</span>
+        <a href="#">Для стройки</a>
+      </div>
+      <div>
+        <span>Скидки 50%</span>
+        <a href="#">На 350 товаров</a>
+      </div>
+      <div>
+        <span>Доставка</span>
+        <a href="#">Бесплатно</a>
+      </div>
+      <div>
+        <span>Дрели</span>
+        <p>Соседям на радость!</p>
+        <a href="#">Открыть каталог</a>
+      </div>
+      <div>
+        <span>Перфораторы</span>
+        <p>Настоящие мужские игрушки</p>
+        <a href="#">Открыть каталог</a>
+      </div>
+      <div>
+        <button type="button">Влево</button>
+        <button type="button">Вправо</button>
+      </div>
+    </section>
+    <section>
+      <div>
+        <h2>Популярные товары:</h2>
+        <a href="#">Все популярные товары</a>
+      </div>
+      <div>
+        <article>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 9000" width="218" height="170">
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <p>32500 Р.</p>
+          <p>25500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+          </div>
+        </article>
+        <article>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <p>22500 Р.</p>
+          <p>15500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+          </div>
+        </article>
+        <article>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <p>30500 Р.</p>
+          <p>25500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+          </div>
+        </article>
+        <article>
+          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <p>12500 Р.</p>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+          </div>
+        </article>
+      </div>
+    </section>
+    <section>
+      <div>
+        <h2>Популярные производители:</h2>
+        <a href="#">Все производители</a>
+      </div>
+      <div>
+        <ul>
+          <li><a href="#"><img src="x.jpg" alt="Bosch" width="126" height="137">Bosch</a></li>
+          <li><a href="#"><img src="x.jpg" alt="Makita" width="123" height="40">Makita</a></li>
+          <li><a href="#"><img src="x.jpg" alt="DeWALT" width="146" height="44">DeWALT</a></li>
+          <li><a href="#"><img src="x.jpg" alt="Интерскол" width="200" height="88">Интерскол</a></li>
+          <li><a href="#"><img src="x.jpg" alt="Hitachi" width="169" height="31">Hitachi</a></li>
+          <li><a href="#"><img src="x.jpg" alt="LG" width="121" height="73">LG</a></li>
+          <li><a href="#"><img src="x.jpg" alt="AEG" width="151" height="96">AEG</a></li>
+          <li><a href="#"><img src="x.jpg" alt="Metabo" width="204" height="69">Metabo</a></li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <h2>Сервисы</h2>
+      <p>Хороший интернет-магазин отличается от плохого не только ценами!
+        Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       <ul>
-        <li><a href="#">Материалы</a></li>
-        <li><a href="#">Техника</a></li>
-        <li><a href="#">Инструмент</a></li>
-        <li><a href="#">Спецпредложения</a></li>
+        <li>Доставка</li>
+        <li>Гарантия</li>
+        <li>Кредит</li>
       </ul>
+      <div>
+        <h3>Доставка</h3>
+        <p>Мы с удовольствием доставим ваш товар прямо
+          к вашему подъезду совершенно бесплатно!
+          Ведь мы неплохо заработаем,
+          поднимая его на ваш этаж!</p>
+      </div>
+      <div>
+        <h3>Гарантия</h3>
+        <p>Если купленный у нас товар поломается или заискрит,
+          а также в случае пожара, спровоцированного его возгоранием,
+          вы всегда можете быть уверены в нашей гарантии.
+          Мы обменяем сгоревший товар на новый.
+          Дом уж восстановите как-нибудь сами.</p>
+      </div>
+      <div>
+        <h3>Кредит</h3>
+        <p>Залезть в долговую яму стало проще!
+          Кредитные консультанты придут вам на помощь.</p>
+        <a href="#">Отправить заявку</a>
+      </div>
+    </section>
+  -->
+    <section>
+      <h2>КОМПАНИЯ «Техномарт»</h2>
       <p>
-        © 2010–2019 Компания «Техномарт»<br>
-        Все права защищены
+        Настоящий мужской шоппинг начинается здесь!
+        Огромный выбор товаров для ремонта и строительства
+        не оставит равнодушными любителей сэкономить на гастарбайтерах.
+      </p>
+      <p>
+        Мы можем доставить ваш товар в самые отдаленные точки России!
+        Техномарт работает со многими транспортными компаниями:
       </p>
       <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li>Деловые линии</li>
+        <li>Автотрейдинг</li>
+        <li>ЖелДорЭкспедиция</li>
       </ul>
-      <p>
-        Обратная связь:
-        <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-      </p>
-      <p>
-        Разработано —
-        <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-      </p>
-    </footer>
-  </body>
+      <a href="#">Подробнее о компании</a>
+    </section>
+    <section>
+      <h2>Контакты</h2>
+      <a href="#"><img src="map.jpg" alt="Карта проезда" width="300" height="158"></a>
+      <a href="#">Заблудились? Напишите нам!</a>
+    </section>
+  </main>
+  <footer>
+    <a href="#"><img src="logo.svg" alt="Логотип компании" width="138" height="23"></a>
+    <p>
+      г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+    </p>
+    <p>
+      <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+    </p>
+    <ul>
+      <li><a href="#">Компания</a></li>
+      <li><a href="#">Новости</a></li>
+      <li><a href="#">Каталог</a></li>
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+    <ul>
+      <li><a href="#">Материалы</a></li>
+      <li><a href="#">Техника</a></li>
+      <li><a href="#">Инструмент</a></li>
+      <li><a href="#">Спецпредложения</a></li>
+    </ul>
+    <p>
+      © 2010–2019 Компания «Техномарт»
+      Все права защищены
+    </p>
+    <ul>
+      <li><a href="#">Вконтакте</a></li>
+      <li><a href="#">Фейсбук</a></li>
+      <li><a href="#">Инстаграм</a></li>
+    </ul>
+    <p>
+      Обратная связь:
+      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+    </p>
+    <p>
+      Разработано —
+      <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+    </p>
+  </footer>
+</body>
+
 </html>
