--- a/catalog.html
+++ b/catalog.html
@@ -47,6 +47,7 @@
         <li><a href="#">Перфораторы</a></li>
       </ul>
       <h1>Перфораторы</h1>
+      <!-- Ф И Л Ь Т Р -->
       <section>
         <h2>Фильтр</h2>
         <form>
@@ -69,7 +70,7 @@
               </li>
               <li>
                 <input type="checkbox" id="interskol" name="interskol">
-                <label for="interskol">ИнтерсколЛ</label>
+                <label for="interskol">Интерскол</label>
               </li>
               <li>
                 <input type="checkbox" id="makita" name="makita" checked>
@@ -104,16 +105,19 @@
       <section>
         <div>
         <h2>Каталог перфораторов</h2>
-        <!--
         <div>
           <span>Сортировка:</span>
-          <a href="#">По цене</a>
-          <a href="#">По типу</a>
-          <a href="#">По функционалу</a>
-          <a href="#">По возрастанию</a>
-          <a href="#">По убыванию</a>
+          <ul>
+            <li><a href="#">По цене</a></li>
+            <li><a href="#">По типу</a></li>
+            <li><a href="#">По функционалу</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">По возрастанию</a></li>
+            <li><a href="#">По убыванию</a></li>
+          </ul>
         </div>
-        -->
+        <!-- К А Т А Л О Г -->
         <article>
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
@@ -142,6 +146,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
+          <div>New</div>
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 3000</h3>
@@ -161,7 +166,7 @@
           <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <div>New</div>
           </div>
         </article>
         <article>
@@ -171,7 +176,6 @@
           <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
           </div>
         </article>
         <article>
@@ -182,7 +186,7 @@
           <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <div>New</div>
           </div>
         </article>
         <article>
@@ -193,7 +197,6 @@
           <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
           </div>
         </article>
         <article>
@@ -203,7 +206,6 @@
           <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
           </div>
         </article>
       </div>
