--- a/index.html
+++ b/index.html
@@ -39,43 +39,54 @@
   </header>
   <main>
     <h1>Главная страница магазина Техномарт</h1>
+    <!-- П Р О М О Б Л О К -->
     <section>
       <h2>Товары и услуги</h2>
       <div>
-        <span>Материалы</span>
+        <h3>Материалы</h3>
         <a href="#">На любой вкус</a>
       </div>
       <div>
-        <span>Инструмент</span>
+        <h3>Инструмент</h3>
         <a href="#">На все случаи</a>
       </div>
       <div>
-        <span>Техника</span>
+        <h3>Техника</h3>
         <a href="#">Для стройки</a>
       </div>
       <div>
-        <span>Скидки 50%</span>
+        <h3>Скидки 50%</h3>
         <a href="#">На 350 товаров</a>
       </div>
       <div>
-        <span>Доставка</span>
+        <h3>Доставка</h3>
         <a href="#">Бесплатно</a>
       </div>
+      <!-- С Л А Й Д Е Р -->
       <div>
-        <span>Дрели</span>
-        <p>Соседям на радость!</p>
-        <a href="#">Открыть каталог</a>
-      </div>
-      <div>
-        <span>Перфораторы</span>
-        <p>Настоящие мужские игрушки</p>
-        <a href="#">Открыть каталог</a>
-      </div>
-      <div>
-        <button type="button">Влево</button>
-        <button type="button">Вправо</button>
+        <div>
+          <div>
+            <h3>Дрели</h3>
+            <p>Соседям на радость</p>
+            <a href="#">Открыть каталог</a>
+          </div>
+          <div>
+            <h3>Перфораторы</h3>
+            <p>Настоящие мужские игрушки</p>
+            <a href="#">Открыть каталог</a>
+          </div>
+        </div>
+        <div>
+          <button type="button">Вперед</button>
+          <button type="button">Назад</button>
+        </div>
+        <div>
+          <button type="button"></button>
+          <button type="button"></button>
+        </div>
       </div>
     </section>
+    <!-- Т О В А Р Ы -->
     <section>
       <div>
         <h2>Популярные товары:</h2>
@@ -84,24 +95,22 @@
       <div>
         <article>
           <img src="item1.jpg" alt="Перфоратор BOSCH BFG 9000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <h3>Перфоратор BOSCH BFG 9000</h3>
           <p>32500 Р.</p>
           <p>25500 Р.</p>
           <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
           </div>
         </article>
         <article>
           <img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <h3>Перфоратор BOSCH BFG 3000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
           <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
           </div>
         </article>
         <article>
@@ -112,21 +121,21 @@
           <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
           </div>
         </article>
         <article>
           <img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <h3>Перфоратор BOSCH BFG 2000</h3>
           <p>12500 Р.</p>
           <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
           </div>
+          <div>New</div>
         </article>
       </div>
     </section>
+    <!-- П Р О И З В О Д И Т Е Л И -->
     <section>
       <div>
         <h2>Популярные производители:</h2>
@@ -134,17 +143,18 @@
       </div>
       <div>
         <ul>
-          <li><a href="#"><img src="x.jpg" alt="Bosch" width="126" height="137">Bosch</a></li>
-          <li><a href="#"><img src="x.jpg" alt="Makita" width="123" height="40">Makita</a></li>
-          <li><a href="#"><img src="x.jpg" alt="DeWALT" width="146" height="44">DeWALT</a></li>
-          <li><a href="#"><img src="x.jpg" alt="Интерскол" width="200" height="88">Интерскол</a></li>
-          <li><a href="#"><img src="x.jpg" alt="Hitachi" width="169" height="31">Hitachi</a></li>
-          <li><a href="#"><img src="x.jpg" alt="LG" width="121" height="73">LG</a></li>
-          <li><a href="#"><img src="x.jpg" alt="AEG" width="151" height="96">AEG</a></li>
-          <li><a href="#"><img src="x.jpg" alt="Metabo" width="204" height="69">Metabo</a></li>
+          <li><a href="#"><img src="x.jpg" alt="Bosch" width="126" height="137"></a></li>
+          <li><a href="#"><img src="x.jpg" alt="Makita" width="123" height="40"></a></li>
+          <li><a href="#"><img src="x.jpg" alt="DeWALT" width="146" height="44"></a></li>
+          <li><a href="#"><img src="x.jpg" alt="Интерскол" width="200" height="88"></a></li>
+          <li><a href="#"><img src="x.jpg" alt="Hitachi" width="169" height="31"></a></li>
+          <li><a href="#"><img src="x.jpg" alt="LG" width="121" height="73"></a></li>
+          <li><a href="#"><img src="x.jpg" alt="AEG" width="151" height="96"></a></li>
+          <li><a href="#"><img src="x.jpg" alt="Metabo" width="204" height="69"></a></li>
         </ul>
       </div>
     </section>
+    <!-- С Е Р В И С Ы -->
     <section>
       <h2>Сервисы</h2>
       <p>Хороший интернет-магазин отличается от плохого не только ценами!
@@ -176,6 +186,7 @@
         <a href="#">Отправить заявку</a>
       </div>
     </section>
+    <!-- О  К О М П А Н И И -->
     <section>
       <h2>КОМПАНИЯ «Техномарт»</h2>
       <p>
