Добавление флага "new"

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <h3>Материалы</h3>
         <a href="#">На любой вкус</a>
       </div>
+      <div>New</div>
       <div>
         <h3>Инструмент</h3>
         <a href="#">На все случаи</a>
