--- a/catalog.html
+++ b/catalog.html
@@ -156,7 +156,7 @@
             <a class="button item-buy" href="#">Купить</a>
             <a class="button item-bookmark" href="#">В закладки</a>
           </div>
-          <div>New</div>
+          <div class="new-flag">New</div>
         </article>
         <article class="cat-item">
           <img src="img/b3000.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
@@ -176,7 +176,7 @@
           <div>
             <a class="button item-buy" href="#">Купить</a>
             <a class="button item-bookmark" href="#">В закладки</a>
-            <div>New</div>
+            <div class="new-flag">New</div>
           </div>
         </article>
         <article class="cat-item">
@@ -196,7 +196,7 @@
           <div>
             <a class="button item-buy" href="#">Купить</a>
             <a class="button item-bookmark" href="#">В закладки</a>
-            <div>New</div>
+            <div class="new-flag">New</div>
           </div>
         </article>
         <article class="cat-item">
