--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section>
       <h2 class="visually-hidden">Товары и услуги</h2>
       <div>
-        <div>New</div>
+        <div class="new-flag">New</div>
         <h3>Материалы</h3>
         <a href="#">На любой вкус</a>
       </div>
@@ -138,7 +138,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <div>New</div>
+          <div class="new-flag">New</div>
         </article>
       </div>
     </section>
