--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div>
     </section>
     <!-- П Р О И З В О Д И Т Е Л И -->
-    <section>
+    <section class="brands">
       <div>
         <h2 class="title">Популярные производители:</h2>
         <a class="button button-details" href="#">Все производители</a>
